--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+<main>
+    <section>
+            <h1>Курс прошло уже 1616 человек</h1>
+            <div class="card">
+                <div class="card1">
+                    <p>
+                        Курс профессионально подготовлен, изложение материала весьма доступное, благодаря прекрасному изложению лекторов и демонстрации примеров. А наличие домашних заданий позволяет закрепить все полученные знания на практике. Теперь другими глазами смотрю фильмы, считываю не только сюжет , но и могу оценить работу режиссера, оператора, монтажера и т.д. Спасибо!
+                    </p>
+                </div>
+                <div class="card2">
+                    <div class="card2-1">
+                        <img src="../model1-final/pict/card2-1.jpg" alt="shekil">
+                    </div>
+                    <div class="card2-2">
+                        <h2 class="card2-2-1">Екатерина Палехова</h2>
+                        <img class="fb" src="../model1-final/pict/card2-2.jpg" alt="shekil2">
+                    </div>
+                </div>
+        </div>
+    </section>
+</main>
 </body>
 </html>
