Updated tablet version Aynur

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 </div>
                 <div class="card2">
                     <div class="card2-1">
-                        <img src="../model1-final/pict/card2-1.jpg" alt="shekil">
+                        <img src="pict/card2-1.jpg" alt="shekil">
                     </div>
                     <div class="card2-2">
                         <h2 class="card2-2-1">Екатерина Палехова</h2>
-                        <img class="fb" src="../model1-final/pict/card2-2.jpg" alt="shekil2">
+                        <img class="fb" src="/pict/card2-2.jpg" alt="shekil2">
                     </div>
                 </div>
         </div>
