--- a/index.html
+++ b/index.html
@@ -3,14 +3,135 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modules</title>
+    <title>Programs</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <p>
-            Alloha
-        </p>
-    </main>
+    <div class="course-program">
+
+        <h2>Программа курса</h2>
+
+        <div class="programs">
+            <!-- Card 1 -->
+            <box class="card">
+                <div class="card-image">
+                    <img src="../Assests/M_img1.png" alt="card_image">
+                </div>
+
+                <div class="card-text">
+                    <p class="text-title">1. Как создают кино</p>
+                    <p class="text-description">
+                        8 сентября 20:00<br>
+                        Данила Кузнецов
+                    </p>
+                </div>
+            </box>
+
+            <!-- Card 2 -->
+            <box class="card">
+                <div class="card-image">
+                    <img src="../Assests/M_img2.png" alt="card_image">
+                </div>
+
+                <div class="card-text">
+                    <p class="text-title">2. Взгляд драматурга</p>
+                    <p class="text-description">
+                        10 сентября 20:00<br>
+                        Данила Кузнецов
+                    </p>
+                </div>
+            </box>
+
+            <!-- Card 3 -->
+            <box class="card">
+                <div class="card-image">
+                    <img src="../Assests/M_img3.png" alt="card_image">
+                </div>
+
+                <div class="card-text">
+                    <p class="text-title">3. Взгляд режиссёра</p>
+                    <p class="text-description">
+                        13 сентября 13:00<br>
+                        Данила Кузнецов
+                    </p>
+                </div>
+            </box>
+
+            <!-- Card 4 -->
+            <box class="card">
+                <div class="card-image">
+                    <img src="../Assests/M_img4.png" alt="card_image">
+                </div>
+
+                <div class="card-text">
+                    <p class="text-title">4. Взгляд монтажёра</p>
+                    <p class="text-description">
+                        15 сентября 20:00<br>
+                        Данила Кузнецов
+                    </p>
+                </div>
+            </box>
+
+            <!-- Card 5 -->
+            <box class="card">
+                <div class="card-image">
+                    <img src="../Assests/M_img5.png" alt="card_image">
+                </div>
+
+                <div class="card-text">
+                    <p class="text-title">5. Жанры в кино</p>
+                    <p class="text-description">
+                        17 сентября 20:00<br>
+                        Данила Кузнецов
+                    </p>
+                </div>
+            </box>
+
+            <!-- Card 6 -->
+            <box class="card">
+                <div class="card-image">
+                    <img src="../Assests/M_img6.png" alt="card_image">
+                </div>
+
+                <div class="card-text">
+                    <p class="text-title">6. Язык кино. Семинар</p>
+                    <p class="text-description">
+                        20 сентября 13:00<br>
+                        Данила Кузнецов
+                    </p>
+                </div>
+            </box>
+
+            <!-- Card 7 -->
+            <box class="card">
+                <div class="card-image">
+                    <img src="../Assests/M_img7.png" alt="card_image">
+                </div>
+
+                <div class="card-text">
+                    <p class="text-title">7. Взгляд кинокритика</p>
+                    <p class="text-description">
+                        21 сентября 19:00<br>
+                        Дмитрий Скворцов
+                    </p>
+                </div>
+            </box>
+
+            <!-- Card 8 -->
+            <box class="card">
+                <div class="card-image">
+                    <img src="../Assests/M_img8.png" alt="card_image">
+                </div>
+
+                <div class="card-text">
+                    <p class="text-title">7. Взгляд кинокритика</p>
+                    <p class="text-description">
+                        21 сентября 19:00<br>
+                        Дмитрий Скворцов
+                    </p>
+                </div>
+            </box>
+        </div>
+    </div>
 </body>
 </html>
