--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
         <h2>Программа курса</h2>
 
+        <!-- Cards block -->
         <div class="programs">
             <!-- Card 1 -->
             <box class="card">
@@ -124,9 +125,9 @@
                 </div>
 
                 <div class="card-text">
-                    <p class="text-title">7. Взгляд кинокритика</p>
+                    <p class="text-title">8. Осознанный зритель. Семинар</p>
                     <p class="text-description">
-                        21 сентября 19:00<br>
+                        22 сентября 19:00<br>
                         Дмитрий Скворцов
                     </p>
                 </div>
