desktop version modified

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
 
                 <div class="card-text">
-                    <p class="text-title">8. Осознанный зритель. Семинар</p>
+                    <p class="text-title">8. Осознанный зритель.<br>Семинар</p>
                     <p class="text-description">
                         22 сентября 19:00<br>
                         Дмитрий Скворцов
