--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/style/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <title>Modul1</title>
 </head>
 <body>
@@ -45,7 +42,8 @@
 
         </div>
 
-    </div>    
+    </div>   
+
     <div class="what-we-learn">
         <h2>Что узнаем</h2>
         <div class="list">
@@ -64,6 +62,8 @@
         </div>
     </div>
 <!-- bura kursun programi hissesini elave etmelisen -->
+
+
 
     <div class="stats">
         <h2>Курс прошло уже 1616 человек</h2>
@@ -89,23 +89,49 @@
 
     <div class="start">
         <h2>Начало курса — 8 сентября</h2>
-        <p>Стоимость</p>
-        <p>3900 руб.</p>
-        <div class="start-info">
-            <p>Для любого уровня</p>  
-            <p>Курс подходит и тем, кто начинает «с нуля», и тем, кто хочет упорядочить имеющиеся знания.</p>
-        </div>
-        <div class="start-info">
-            <p>Проходите сейчас</p>  
-            <p>Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете</p>
-        </div>
+        <p class="price-name">Стоимость</p>
+        <p class="price">3900 руб.</p>
+      <div class="start-info">
+            <div class="start-info1">
+                <p id="head">Для любого уровня</p>  
+                <p id="info">Курс подходит и тем, кто начинает «с нуля», и тем, кто хочет упорядочить имеющиеся знания.</p>
+            </div>
+            <div class="start-info2">
+                <p id="head">Проходите сейчас</p>  
+                <p id="info">Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете</p>
+            </div>
+      </div>
     </div>
 
     </main>
 
     <footer>
-        <img class="icon" src="/images/footer.png" alt="site logo">
-
+        <div class="footer">
+            <div class="wrapper">
+                <div class="social">
+            <img class="icon" src="/images/footer.png" alt="site logo">
+                    <a href="#" target="_blank">
+                        <img src="/images/insta.png" alt="insta">
+                    </a>
+                    <a href="#" target="_blank">
+                        <img src="/images/fb.png" alt="facebook">
+                    </a>
+                    <a href="#" target="_blank">
+                        <img src="/images/vk.png" alt="vk">
+                    </a>
+                    <a href="#" target="_blank">
+                        <img src="/images/wp.png" alt="whats">
+                    </a>
+                    <p>© Синхронизация, 2020</p>
+                </div>
+        
+                <div class="connection">
+                    <p> <img src="/images/phone.png" alt="phone">+7 (499) 39-146-39 
+                    </p>
+                    <p> <img src="/images/mail.png" alt="">hello@synchronize.ru </p>
+                </div>
+           </div>
+        </div>
     </footer>
 </body>
 </html>
