Updated all versions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <main>
     <section>
-
+        <div class="container">
             <h1>Курс прошло уже 1616 человек</h1>
             <div class="card">
                 <div class="card1">
@@ -30,6 +30,7 @@
                     </div>
                 </div>
         </div>
+    </div>
     </section>
 </main>
 </body>
