--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
                     </div>
                     <div class="introduction-image"><img src="./image/noroot 1.png" alt=""></div>
                 </div>
+                <div class="introduction-card-parent">
                 <div class="introduction-card">
                     <p class="introduction-card-text">Зритель для меня не потребитель моей продукции, не судья, а соучастник творчества, соавтор.</p>
                     <p class="introduction-card-name">Андрей Тарковский</p>
+                </div>
                 </div>
             </div>
         </section>
