--- a/gulnar.html
+++ b/gulnar.html
@@ -13,15 +13,15 @@
             <div class="format-cards">
                 <div class="format-card">
                     <h3>Вебинары</h3>
-                    <p class="card-text">Занятия проходят онлайн в режиме вебинаров с преподавателем</p>
+                    <p class="format-card-text">Занятия проходят онлайн в режиме вебинаров с преподавателем</p>
                 </div>
                 <div class="format-card">
                     <h3>Доступ навсегда</h3>
-                    <p class="card-text">Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете</p>
+                    <p class="format-card-text">Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете</p>
                 </div>
                 <div class="format-card">
                     <h3>Общение</h3>
-                    <p class="card-text">Вы можете задать вопрос преподавателю на занятии</p>
+                    <p class="format-card-text">Вы можете задать вопрос преподавателю на занятии</p>
                 </div>
             </div>
      </section>
