--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Omega</title>
-    <link rel="stylesheet" href="/style/aysel.css">
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel="stylesheet" href="/style/gulnar.css">
-    <link rel="stylesheet" href="/style/aynur.css">
-    <link rel="stylesheet" href="/style/vusal.css">
-    <link rel="stylesheet" href="/style/footer.css">
+    <link rel="stylesheet" href="style/aysel.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/gulnar.css">
+    <link rel="stylesheet" href="style/aynur.css">
+    <link rel="stylesheet" href="style/vusal.css">
+    <link rel="stylesheet" href="style/footer.css">
 
 </head>
 <body>
